--- a/_eOrganicShop/Dockerfile
+++ b/_eOrganicShop/Dockerfile
@@ -1,22 +1,17 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-FROM mcr.microsoft.com/dotnet/aspnet:3.1 AS base
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 5000
+ENV ASPNETCORE_URLS=http://+:5000
 
-FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
-COPY ["eOrganicShop/eOrganicShop.csproj", "eOrganicShop/"]
-RUN dotnet restore "eOrganicShop/eOrganicShop.csproj"
 COPY . .
-WORKDIR "/src/eOrganicShop"
-RUN dotnet build "eOrganicShop.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "eOrganicShop.csproj" -c Release -o /app/publish
-
+RUN dotnet publish "eOrganicShop" -c Release -o /app
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=publish /app .
+ADD ./eOrganicShop/Files ./Files
+
 ENTRYPOINT ["dotnet", "eOrganicShop.dll"]
