--- a/_eOrganicShop/Dockerfile
+++ b/_eOrganicShop/Dockerfile
@@ -1,9 +1,7 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
+FROM mcr.microsoft.com/dotnet/aspnet:3.1 AS base
 WORKDIR /app
-EXPOSE 5000
-ENV ASPNETCORE_URLS=http://+:5000
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
+FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /src
 COPY . .
 
@@ -12,6 +10,6 @@ RUN dotnet publish "eOrganicShop" -c Release -o /app
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-ADD ./eOrganicShop/Files ./Files
+
 
 ENTRYPOINT ["dotnet", "eOrganicShop.dll"]
